logs/ajax.log
Internal Server Error: /api/
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 111, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/ckq/xuhui_project/College_Barter_Server/CollegeBarter/collegebarter/views.py", line 396, in android_request
    request.session.set_expiry()
TypeError: set_expiry() takes exactly 2 arguments (1 given)
Internal Server Error: /api/
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 111, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/ckq/xuhui_project/College_Barter_Server/CollegeBarter/collegebarter/views.py", line 396, in android_request
    request.session.set_expiry()
TypeError: set_expiry() takes exactly 2 arguments (1 given)
Internal Server Error: /api/
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 98, in get_response
    resolver_match = resolver.resolve(request.path_info)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 340, in resolve
    sub_match = pattern.resolve(new_path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 224, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 231, in callback
    self._callback = get_callable(self._callback_str)
  File "/usr/local/lib/python2.7/dist-packages/django/utils/lru_cache.py", line 101, in wrapper
    result = user_function(*args, **kwds)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 97, in get_callable
    mod = import_module(mod_name)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/ckq/xuhui_project/College_Barter_Server/CollegeBarter/collegebarter/views.py", line 346
    elif len(images)==3:
                       ^
IndentationError: unindent does not match any outer indentation level
Not Found: /CollegeBarter/media/upload_image/IMG_20140915_000950.jpg
Not Found: /favicon.ico
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
Not Found: /CollegeBarter/media/resize_image/resize_
